Fix layout issues

--- a/frontend/src/assets/css/notification-list.css
+++ b/frontend/src/assets/css/notification-list.css
@@ -10,13 +10,13 @@ div.notifications {
 
 @media only screen and (width <=960px) {
   div.notifications {
-    top: 56px;
+    top: 57px;
   }
 }
 
 @media only screen and (width >=960px) {
   div.notifications {
-    top: 64px;
+    top: 66px;
   }
 }
 
@@ -50,7 +50,7 @@ div.notifications div.header-container div.header {
 }
 
 
-div.notifications div.footer {
+div.notifications div.notifications-footer {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -63,7 +63,7 @@ div.notifications div.footer {
   padding: 5px 10px 5px 0;
 }
 
-div.notifications div.footer div.row-count {
+div.notifications div.notifications-footer div.row-count {
   font-size: 14px;
   display: flex;
   flex-direction: row;
@@ -71,12 +71,12 @@ div.notifications div.footer div.row-count {
   margin-right: 7px;
 }
 
-div.notifications div.footer div.actions {
+div.notifications div.notifications-footer div.actions {
   display: flex;
   flex-direction: row;
 }
 
-div.notifications div.footer div.actions .icon {
+div.notifications div.notifications-footer div.actions .icon {
   font-size: 16px;
   width: 24px;
 }
